crates/uitest/fixtures/ty_check/assert_builtin.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/assert_builtin.fe
---
error[8-0000]: type mismatch
   ┌─ assert_builtin.fe:15:13
   │
15 │     assert!(1, "boom")
   │             ^ expected `bool`, but `{integer}` is given

error[8-0012]: undefined variable
   ┌─ assert_builtin.fe:19:5
   │
19 │     assert_msg(false, "boom")
   │     ^^^^^^^^^^ undefined variable `assert_msg`

error[8-0082]: `assert!` argument number mismatch
  ┌─ assert_builtin.fe:2:12
  │
2 │     assert!()
  │            ^^ expected 1 or 2 arguments, but 0 given

error[8-0082]: `assert!` argument number mismatch
  ┌─ assert_builtin.fe:6:12
  │
6 │     assert!(true, "boom", "extra")
  │            ^^^^^^^^^^^^^^^^^^^^^^^ expected 1 or 2 arguments, but 3 given

error[8-0083]: `assert!` message must be a string literal
   ┌─ assert_builtin.fe:11:19
   │
11 │     assert!(true, message)
   │                   ^^^^^^^ use a string literal for the revert message
